# bismuth

src/plasmoid/: CMakeLists.txt
src/plasmoid/package/: metadata.json
src/plasmoid/package/contents/ui/: FullRepresentation.qml  main.qml
src/plasmoid/plugin/: CMakeLists.txt  controller.cpp  controller.h  monitor.cpp  monitor.h  monitor_p.h  plugin.cpp  plugin.h  qmldir
